...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Stops Nearby" id="Zrx-Bk-9mn"/>
                    <connections>
                        <outlet property="mapView" destination="ugt-Dx-2Ie" id="ZTi-ol-TNa"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iP7-ze-EgI">
                                                    <rect key="frame" x="0.0" y="0.0" width="60" height="25"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="FavouriteButton"/>
                                                    <state key="normal" image="Star-25"/>
                                                    <state key="selected" image="Star Filled-25"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZAa-Br-kBe">
                                                    <rect key="frame" x="0.0" y="0.0" width="60" height="25"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="ReminderButton"/>
                                                    <state key="normal" image="Geo-fence-25"/>
                                                    <state key="selected" image="Globe Asia Filled-25"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Search" id="KgP-xB-1YI"/>
                    <connections>
                        <segue destination="C2H-CL-V7E" kind="show" identifier="ShowStopDetailSegue" id="bYz-3E-Of8"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Favourites" id="oTs-0s-16D"/>
                    <connections>
                        <segue destination="C2H-CL-V7E" kind="show" identifier="ShowStopDetailSegue" id="j9w-hn-R4J"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Settings" id="RDp-lu-OBW"/>
                    <connections>
                        <outlet property="clearAllRemindersButton" destination="Lk5-8S-S7L" id="JdU-WK-uAa"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Disruptions" id="9dk-Ze-9cB"/>
                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="dvu-Bw-zQx">
                        <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Lifts currently out of order at Parliament Station" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="t3X-WJ-ZjS">
                                                    <rect key="frame" x="15" y="0.0" width="570" height="44"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Disruption" id="uGP-lA-gFm">
                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="rKD-RH-reK">
                            <connections>
...
