...
   /// Returns a human-readable textual description of the disruption mode.
   var description: String {
      get {
         switch self {
         case .General: return "General"
         case .MetroBus: return "Metro Bus"
         case .MetroTrain: return "Metro Train"
         case .MetroTram: return "Yarra Trams"
         case .RegionalBus: return "Regional Bus"
         case .RegionalCoach: return "V/Line Coach"
         case .RegionalTrain: return "V/Line Train"
         }
      }
...
